@@ -45,7 +45,6 @@ public final class Images {
     public static final String APP_LOGO_300 = "logo300x300.png";
     public static final String POWERED_BY_LAST_FM = "poweredByLastFm.png";
     
-    public static final String KARAOKE = "karaoke.png";
     public static final String NEXT_TRAY = OsManager.osType.isWindowsVista() ? "nextTrayVista.png" : "nextTray.png";
     public static final String NEXT_TRAY_MENU = "nextTrayMenu.png";
     public static final String NORMALIZATION = "normalization.png";
