@@ -55,7 +55,6 @@ public enum Preferences {
 	HOTKEYS_CONFIG, 
 	IMPORT_EXPORT_FILENAME_PATTERN, 
 	IMPORT_EXPORT_FOLDER_PATH_PATTERN, 
-	KARAOKE, 
 	LAST_REPOSITORY_FOLDERS, 
 	LASTFM_ENABLED, 
 	LASTFM_PASSWORD, 
